Refactor event and relationship handling in PersonPanel
Refactor the handling of events and relationships in PersonPanel to use referenced nodes instead of direct field access. This update standardizes data access methods and removes deprecated methods and commented-out code, enhancing code clarity and maintainability.

Refactor methods to use Integer for record IDs

Updated method signatures and related calls to use Integer instead of int for record IDs. This change ensures better handling of null values and conforms to the usage of nullable types in the codebase.

Add event handling for historic dates in dialogs

Refactored `SearchDialog` and `Main.java` to handle historic dates for various entities. Added cases for `HISTORIC_DATE`, `HISTORIC_DATE_START`, and `HISTORIC_DATE_END` with appropriate relationship mappings and dialog handling logic.

Remove unused methods and refactor references

Removed unused data extraction methods from EntityManager.java and refactored Main.java to use repository lookups for calendar, media, person, and cultural norm IDs. This improves maintainability and aligns with updated data handling practices.